--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb+srv://ahmetbasboga85:SANANEYARRAM0@cluster0.bvg24bu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb://localhost:27017/1milyonpixel
+NODE_ENV=development
 PORT=4000
