--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node server/server.js",
-    "test": "cross-env NODE_ENV=test jest --watchAll --detectOpenHandles --runInBand",
+    "test": "cross-env NODE_ENV=test MONGODB_URI_TEST=mongodb://localhost:27017/1milyonpixel_test jest --watchAll",
     "test:ci": "cross-env NODE_ENV=test jest --ci --forceExit"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.6.5",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
