--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/1milyonpixel
+MONGODB_URI=mongodb+srv://ahmetbasboga85:CLUSTERBABA00@cluster0.bvg24bu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV=development
-PORT=4000
+PORT=4002
+JWT_SECRET=your_super_secret_key_12345
